--- a/Resources/Private/Templates/Login/ForgotPassword.html
+++ b/Resources/Private/Templates/Login/ForgotPassword.html
@@ -37,25 +37,21 @@
 		</f:if>
 	</ul>
 
-	<f:form enctype="multipart/form-data" action="handleForgotPassword" method="post">
+	<f:form enctype="multipart/form-data" action="handleForgotPassword" method="post" class="ym-form">
 		<div class="row">
-			<div class="span4">
-				<div class="input control-group">
-					<label for="cicregister-login-emailAddress">
-						<f:translate key="LLL:EXT:cicregister/Resources/Private/Language/locallang.xml:form-loginController-allActions-emailAddressLabel"/>
-					</label>
-					<f:form.textfield id="cicregister-login-emailAddress" name="emailAddress" value=""/>
-				</div>
+			<div class="ym-fbox">
+                <label for="cicregister-login-emailAddress">
+                    <f:translate key="LLL:EXT:cicregister/Resources/Private/Language/locallang.xml:form-loginController-allActions-emailAddressLabel"/>
+                </label>
+                <f:form.textfield id="cicregister-login-emailAddress" name="emailAddress" value=""/>
 			</div>
 		</div>
-		<div class="row">
-			<div class="span5">
-				<f:form.submit name="submit" class="btn primary" value="{f:translate(key:'LLL:EXT:cicregister/Resources/Private/Language/locallang.xml:form-loginController-forgotPassword-submit')}"/>
-				&nbsp;
-				<f:link.action class="btn secondary" action="login">
-					<f:translate key="LLL:EXT:cicregister/Resources/Private/Language/locallang.xml:form-loginController-allActions-returnToLogin"/>
-				</f:link.action>
-			</div>
+		<div class="ym-fbox">
+            <f:form.submit name="submit" class="ym-button ym-warning" value="{f:translate(key:'LLL:EXT:cicregister/Resources/Private/Language/locallang.xml:form-loginController-forgotPassword-submit')}"/>
+            &nbsp;
+            <f:link.action class="btn secondary" action="login">
+                <f:translate key="LLL:EXT:cicregister/Resources/Private/Language/locallang.xml:form-loginController-allActions-returnToLogin"/>
+            </f:link.action>
 		</div>
 	</f:form>
 </f:section>
